fixed navigation spacing on small screens

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -33,7 +33,10 @@ header {
 	}
 
   .menu-icon {
+    padding: 5px 10px;
+    margin-top: -6px;
     float: right;
+    display: none;
   }
 
   .navigation {
@@ -76,7 +79,7 @@ header {
     }
 
     .menu-icon {
-      float: right;
+      display: block;
     }
 
     .navigation {
@@ -84,7 +87,7 @@ header {
       background-color: #DA4453;
       padding: 15px;
       top: 30px;
-      right: 0;
+      right: 15px;
       z-index: 100;
       display: none;
 
